--- a/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
+++ b/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
@@ -5,27 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NirvanaEditor.Hub"
              mc:Ignorable="d" Width="800"
+             d:DataContext="{d:DesignInstance Type=local:CrearProyecto, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <local:CrearProyecto/>
+    </UserControl.DataContext>
     <StackPanel Background="White">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <ListBox Width="195" Height="250"/>
-            <Border Width="400" Height="250" Margin="5,0,0,0"/>
+            <ListBox Width="195" Height="250" ItemsSource="{Binding Plantillas}"
+                     x:Name="cajaPlantillas" SelectedIndex="0">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Icono}" Margin="0,0,5,0" 
+                                   Width="55" Height="55"/>
+                            <TextBlock Text="{Binding ProyectoTipo}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Border Width="400" Height="250" Margin="5,0,0,0">
+                <Border.Background>
+                    <ImageBrush ImageSource="{Binding Path=SelectedItem.Imagen,
+                        ElementName=cajaPlantillas}"/>
+                </Border.Background>
+            </Border>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,30,0,0">
             <TextBlock Text="Nombre" Width="50"/>
-            <TextBlock Width="550"/>
+            <TextBlock Width="550" Text="{Binding Nombre}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,5,0,0">
             <TextBlock Text="Ruta" Width="50"/>
-            <TextBlock Width="500"/>
+            <TextBlock Width="500"  Text="{Binding Ruta}"/>
             <Button Content="..." Width="45" Margin="5,0,0,0"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
             Margin="0,30,0,0">
             <Button Content="Crear" Width="96" IsDefault="True"/>
-            <Button Content="Volver" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+            <Button Content="Salir" Width="96" Margin="30,0,0,0" IsCancel="True"/>
         </StackPanel>
     </StackPanel>
 </UserControl>
