--- a/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
+++ b/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
@@ -34,18 +34,19 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,30,0,0">
             <TextBlock Text="Nombre" Width="50"/>
-            <TextBlock Width="550" Text="{Binding Nombre}"/>
+            <TextBox Width="550" Text="{Binding Nombre, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                     Margin="0,5,0,0">
             <TextBlock Text="Ruta" Width="50"/>
-            <TextBlock Width="500"  Text="{Binding Ruta}"/>
+            <TextBox Width="500"  Text="{Binding Ruta, UpdateSourceTrigger=PropertyChanged}"/>
             <Button Content="..." Width="45" Margin="5,0,0,0"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
             Margin="0,30,0,0">
-            <Button Content="Crear" Width="96" IsDefault="True"/>
+            <Button Content="Crear" Width="96" IsDefault="True" IsEnabled="{Binding EsValida}"/>
             <Button Content="Salir" Width="96" Margin="30,0,0,0" IsCancel="True"/>
         </StackPanel>
+        <TextBlock Text="{Binding MsjError}" Margin="0,20,0,0" HorizontalAlignment="Center"/>
     </StackPanel>
 </UserControl>
