--- a/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
+++ b/Nirvana/NirvanaEditor/Hub/VistaCrearProyecto.xaml
@@ -44,7 +44,8 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
             Margin="0,30,0,0">
-            <Button Content="Crear" Width="96" IsDefault="True" IsEnabled="{Binding EsValida}"/>
+            <Button Content="Crear" Width="96" IsDefault="True" IsEnabled="{Binding EsValida}"
+                    Click="UIBotonCrearProyecto"/>
             <Button Content="Salir" Width="96" Margin="30,0,0,0" IsCancel="True"/>
         </StackPanel>
         <TextBlock Text="{Binding MsjError}" Margin="0,20,0,0" HorizontalAlignment="Center"/>
